--- a/app/styles/calendar.css
+++ b/app/styles/calendar.css
@@ -1,9 +1,13 @@
 /* CSS oficial do React Big Calendar */
 @import "react-big-calendar/lib/css/react-big-calendar.css";
 
-/* ❗ Ocultar horários fora das 6h–18h */
-.rbc-time-content > * > .rbc-timeslot-group:nth-child(-n+12), /* antes das 6h */
-.rbc-time-content > * > .rbc-timeslot-group:nth-last-child(-n+12) { /* depois das 18h */
+/* Ocultar horários antes das 6h e depois das 18h */
+
+.rbc-time-content .rbc-timeslot-group:nth-child(-n + 12) {
+  display: none !important;
+}
+
+.rbc-time-content .rbc-timeslot-group:nth-last-child(-n + 16) {
   display: none !important;
 }
 
